src/scss/_about.scss
@import "_variables";

.about {
    width: 100%;
    max-width: $max-width-desktop;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-start;
    margin: 0 auto;

    padding-top: 112px;;
    max-width: $max-width-desktop;
  
    @media (max-width: $min-width-desktop) {
      padding-top: 1rem;
    }
  
    &__description {
      padding: 0 1rem;
      max-width: $max-width-container;
      font-size: 2rem;
      font-weight: 600;
      line-height: 3rem;
      @media (max-width: $min-width-mobile) {
        font-size: 1.4rem;
        //width: 100%;
      }
    }
  
    &__link {
      text-decoration: underline;
      color: $blue;
      font-weight: 600;

      &--email {
          margin-left: 1rem;
        text-decoration: none;
        font-size: 1.1rem;
        padding-bottom: 8px;
        border-bottom: 2px solid $blue;
      }
    }
  
    &__navigation {
      max-width: $max-width-container;
      font-size: 1.1rem;
      line-height: 2rem;
      margin-bottom: 48px;
      padding: 0 1rem;
    }
  
    &__user {
      width: 100%;
      display: flex;
      flex-direction: row;
      justify-content: flex-start;
      align-items: baseline;
      padding-bottom: 32px;
      border-bottom: thin solid $grey;
  
      @media (max-width: $min-width-desktop) {
        flex-direction: column;
        align-items: flex-start;
      }
    }
  }

  .user {
    display: flex;
    flex-direction: row;
    padding: 0 1rem;
    max-width: $max-width-desktop;
    align-items: baseline;

    @media (max-width: $min-width-desktop) {
        flex-direction: column;
    }

    &__avatar {
      border-radius: 50%;
      width: 110px;
      height: 110px;
      padding: 0.4rem;
      border-color: $grey;
      border-width: .5rem;
      border-style: solid;
    }
  
    &__name {
      padding-left: 16px;
      font-weight: 600;
      font-size: 4rem;
      margin: 0;
      color: $grey;
      @media (max-width: $min-width-desktop) {
        padding: 0;
      }
    }
  }

